--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -64,3 +64,171 @@
     width:30px;
     border-radius: 100%;
 }
+
+
+
+/*----------Login site----------*/
+
+
+.logInShadow{
+    box-shadow: 0px 1px 21px -8px rgba(21,20,20,0.25);
+}
+
+.loginContainer{
+    margin-top:35px;
+    border-radius: 25%;
+}
+
+.loginText{
+    font-size:20px !important;
+    padding-top: 0px !important;
+}
+
+.descriptionText{
+    font-size: 16px !important;
+}
+
+.loginImageSize{
+    width:390px;
+    display: flex;
+    height:100%;
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
+    margin-left: 25px;
+}
+
+.loginPlannrImage{
+    height: 155px !important;
+    margin-bottom:20px;
+}
+
+input:focus,
+textarea:focus {
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: 1px solid #18197a !important;
+    outline-width: 0;
+    font-weight: 400
+}
+
+button:focus {
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    outline-width: 0
+}
+
+#card {
+    height: 710px;
+    border: none;
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-bottom-left-radius: 40px !important;
+}
+
+#card1 {
+    height: 710px;
+    border: none;
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    box-shadow: 0px 1px 21px -8px rgba(21,20,20,0.25);
+}
+
+.card1 {
+    height: 650px;
+    width: 60%;
+    padding: 40px 30px 10px 30px;
+    border-top-right-radius: 40px !important;
+    border-bottom-right-radius: 40px !important;
+}
+
+.card2 {
+    height: 650px;
+    width: 40%;
+    border-top-left-radius: 40px;
+    box-shadow: 0px 1px 21px -8px rgba(21,20,20,0.25);
+}
+
+.heading {
+    margin-bottom: 50px !important
+}
+
+::placeholder {
+    color: black !important;
+    opacity: 1
+}
+
+:-ms-input-placeholder {
+    color: #000 !important
+}
+
+::-ms-input-placeholder {
+    color: #000 !important
+}
+
+.formFont{
+    font-size:14px !important;
+}
+
+.msg-info {
+    padding-left: 15px;
+    margin-bottom: 20px
+}
+
+.btn-color {
+    border-radius: 5px;
+    color: #fff;
+    /*background-image: linear-gradient(to right, #7c7c7c, #f5d035);*/
+    background-color: #f5d035;
+    padding: 15px;
+    cursor: pointer;
+    border: none !important;
+    margin-top: 25px
+}
+
+.btn-color:hover {
+    color: #fff;
+    /*background-image: linear-gradient(to right, #95c3f9, #f5d035);*/
+    background-color: #ddb938;
+}
+
+.btn-white {
+    border-radius: 50px;
+    color: #03b8f9;
+    background-color: #fff;
+    padding: 8px 40px;
+    cursor: pointer;
+    border: 2px solid #03b8f9 !important
+}
+
+.btn-white:hover {
+    color: #fff;
+    background: #03b8f9;
+}
+
+.bottom {
+    width: 100%;
+    margin-top: 50px !important
+}
+
+.sm-text {
+    font-size: 15px
+}
+
