--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Adventure alley</title>
+
+    <!-- stylesheet -->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Assistant&display=swap" rel="stylesheet">
+
+    <!-- Icon -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- for bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+
 </head>
+
 <body>
-    <h1>Login page</h1>
+
+    <body>
+    <div class="container loginContainer">
+        <div>
+            <div class="d-flex flex-lg-row">
+
+                <div class="card2" id="card">
+
+                    <img src="images/undraw_team_ih79.svg" class="loginImageSize"/>
+
+                </div>
+
+                <div class="card1" id="card1">
+
+                    <div class="row justify-content-center my-auto">
+
+                        <div class="col-md-8 col-10 my-3">
+
+                            <div class="row justify-content-center">
+                                <img src="images/adventureAlleyLogo.png" class="loginPlannrImage">
+                            </div>
+
+                            <span class="msg-info loginText row justify-content-center px-3 mb-3">Personale login</span>
+
+                            <form th:action="@{/login}" method="post">
+
+                                <!--Implemented through SpringSecurity-->
+                                <div th:if="${param.error}" class="alert alert-error">
+                                    Forkert brugernavn eller password.
+                                </div>
+
+                                <!--Implemented through SpringSecurity-->
+                                <div th:if="${param.logout}" class="alert alert-success">
+                                    Du er blevet logget ud. Log venligst ind igen.
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="text" name="username" placeholder="Brugernavn" class="form-control formFont">
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="password" name="password" placeholder="Password" class="form-control formFont">
+                                </div>
+
+                                <div class="row justify-content-center my-2 px-3">
+                                    <button type="submit" name="button" class="btn-block btn-color">Login</button>
+                                </div>
+                            </form>
+
+                            <div class="bottom text-center mb-2">
+                                <p class="sm-text mx-auto mb-3">Tilbage til hovedsiden?
+                                    <a href="./"><button class="btn btn-white ml-2">Tilbage</button></a>
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
