--- a/src/main/resources/templates/components.html
+++ b/src/main/resources/templates/components.html
@@ -31,25 +31,22 @@
 <div class="navBackground" th:fragment="navigationBarLoggedIn">
 
     <div class="container">
-        <div class="row">
-            <div class="offset-11 col-1">
-                <div>
-                    <div class="navDropdown navLinkStyle navImgPlacement">
-                        <img src="../images/favicon.png" class="navImg"/>
-                        <div class="navDropdown-content">
-                            <a href="/logout" class="navLinkStyle">Log ud</a>
-                        </div>
-                    </div>
-
-                    <div class="navLinkStyle">
-                        <a href="/adminMainPage" class="navLinkStyle">
-                            <img src="../images/A.png" class="navImg"/>
-                        </a>
-                    </div>
-
+        <div class ="row">
+            <div class="offset-9 col-1 navDropdown navLinkStyle navImgPlacement">
+                <img src="../images/favicon.png" class="navImg"/>
+                <div class="navDropdown-content">
+                    <a href="/logout" class="navLinkStyle">Log ud</a>
                 </div>
             </div>
+
+
+            <div class="colspan-1 navLinkStyle">
+                <a href="/adminMainPage" class="navLinkStyle">
+                    <img src="../images/A.png" class="navImg"/>
+                </a>
+            </div>
         </div>
+
     </div>
 </div>
 
