--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,9 +28,28 @@
 
     <div th:unless="${loggedIn}">
         <div th:insert="components :: navigationBar"></div>
+
+        <div class="container tempBorderBlue">
+            <div class="row tempBorderRed" th:each = "activity: ${activityList}">
+                <div class="col-2">
+                    <div th:text="${activity.getTitle()}"></div>
+                </div>
+                <div class="col-2">
+                    <div th:text="${activity.getTitle()}"></div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 
     <H1>Adventure Alley - main page</H1>
+
+
+
+
+
+
 
 </body>
 </html>
