Refactored model (Db, Repos, model classes). New backpack for new landingpage design. Ready for front-end part-1 (front-end without JS and use of Rest service)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,17 +33,18 @@
     <H1>Adventure Alley - Landing page</H1>
 
 
-    <!--        <div class="container tempBorderBlue">
-                <div class="row tempBorderRed" th:each = "activity: ${activityList}">
-                    <div class="col-2">
-                        <div th:text="${activity.getTitle()}"></div>
-                    </div>
-                    <div class="col-2">
-                        <div th:text="${activity.getTitle()}"></div>
-                    </div>
-                </div>
+    <div class="container tempBorderBlue">
 
-            </div>-->
+        <div class="row tempBorderRed" th:each = "activity: ${activityList}">
+            <div class="col-2">
+                <div th:text="${activity.getTitle()}"></div>
+            </div>
+            <div class="col-2">
+                <div th:text="${activity.getTitle()}"></div>
+            </div>
+        </div>
+
+    </div>-->
 
 
 
