--- a/src/main/resources/templates/components.html
+++ b/src/main/resources/templates/components.html
@@ -41,8 +41,8 @@
 
 
             <div class="colspan-1 navLinkStyle">
-                <a href="/adminMainPage" class="navLinkStyle">
-                    <img src="../images/A.png" class="navImg"/>
+                <a href="/" class="navLinkStyle">
+                    <img src="../images/A1.png" class="navImg"/>
                 </a>
             </div>
         </div>
