--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -257,6 +257,32 @@ button:focus {
     background-color: white;
 }
 
+.CreateActivityBox{
+    width: 100%;
+    height: auto;
+}
+
+.createActivityContent{
+    font-size: 200px;
+    font-weight: lighter;
+    color: #283037;
+    height:400px;
+    text-align: center;
+    margin-left: 15px !important;
+    margin-right: 15px !important;
+    border: 1px solid black;
+    /*background: #eeeeee;*/
+    background: #dfdfdf;
+}
+
+.createActivityContent:hover{
+    background: rgba(15, 26, 34, 0.3);
+}
+
+.imagePlus{
+    height:200px;
+}
+
 .activityBox{
     height: 400px;
     text-align: center;
@@ -275,10 +301,14 @@ button:focus {
     color: white;
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
-    background: rgba(15, 26, 34, 0.9); /* Black background with 0.7 opacity */
+    background: rgba(15, 26, 34, 0.9);
     width: 100%;
     height: auto;
     padding: 15px;
+}
+
+.SeDescription{
+    font-size: 15px !important;
 }
 
 .activityContent{
@@ -291,7 +321,7 @@ button:focus {
     padding-left: 15px;
     padding-bottom: 15px;
     padding-top: 10px;
-    margin-top:184px;
+    margin-top:175px;
     text-align: left;
 }
 
@@ -306,6 +336,7 @@ button:focus {
 .activitydropdown:hover{
     color: #efd14b;
 }
+
 
 
 
