--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -305,7 +305,7 @@ button:focus {
     text-align: center;
     margin-left: 15px !important;
     margin-right:15px !important;
-    margin-bottom:60px !important;
+    margin-top:60px !important;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -342,19 +342,42 @@ button:focus {
     text-align: left;
 }
 
-.marginTop{
-    margin-top: 60px;
-}
 
-.activitydropdown{
+.seeDescription{
     font-weight: bold;
 }
 
-.activitydropdown:hover{
-    color: #efd14b;
+.activateActivityDropdown{
+    font-weight: bold;
 }
 
+.activateActivityDropdown:hover{
+    color: #efd14b;
+    position: relative;
+    z-index: -1;
+}
 
+.activitydropdown{
+    display: none;
+    position: relative;
+    z-index: 1;
+    background-color:white;
+    border: 2px solid black;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.activitydropDownContent{
+    list-style-type:none;
+    color: black;
+    margin: 0;
+    padding: 0;
+}
+
+.activityDropdownLI{
+    padding: 5px;
+    margin-left: 5px;
+}
 
 
 
