--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,7 +12,7 @@
 
 /* Style the links inside the navigation bar */
 .navLinkStyle {
-    color: #f2f2f2 !important;
+    color: #2d3842 !important;
     padding: 20px 12px;
     text-decoration: none !important;
     font-size: 15px;
@@ -20,10 +20,13 @@
     display: inline;
 }
 
-.navDropdown-content a:hover {background-color: #607b8b}
+.navDropdown-content a:hover {
+    background-color: #e2e2e2;
+    border-radius: 2px;
+}
 
 .navLinkStyle:hover{
-    color:  #efd14b !important;
+    color: #2d3842 !important;
 }
 
 .navImgPlacement{
@@ -43,14 +46,15 @@
 .navDropdown-content {
     display: none;
     position: absolute;
-    background-color: #607b8b;
+    background-color: #ffffff;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    border-radius: 2px;
 }
 
 .navDropdown-content a {
-    color: #eeeeee;
+    color: #2d3842;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -298,17 +302,37 @@ button:focus {
 }
 
 .CreateActivityPopUpBoxContainer{
-    background-color: white;
     box-shadow: 0px 1px 21px -8px rgba(21,20,20,0.25);
-    height: 700px;
+    border: 1px solid #888;
+    height: 830px;
     border-radius: 2px;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 60px !important;
+    width: 80%;
+    position: relative;
+}
 
+.closePlus {
+    color: #aaaaaa;
+    position: absolute;
+    top:20px;
+    right:40px;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.closePlus:hover,
+.closePlus:focus{
+    color: #111a22;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .CreateActivityPopUpHeader{
-    padding-top: 50px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 55px;
     text-align: center;
 }
 
@@ -318,16 +342,44 @@ button:focus {
     font-family: 'Montserrat', sans-serif;
 }
 
-
-/*
-.activityFormInfo{
+.createActivityPopUpInput{
     text-align: left;
     width: 100%;
-    font-family:'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size:15px;
-    margin-right: 0 !important;
-    margin-left: 0 !important;
-}*/
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    box-shadow: 0px 1px 21px -8px rgba(21,20,20,0.25);
+    border: 1px solid #aaa!important;
+}
+
+.createActivityPopUpInputHeader{
+    font-size:20px !important;
+}
+
+.createActivityPopUpInputArea{
+    height: 300px;
+}
+
+.createActivityBtn{
+    border-radius: 2px;
+    color:#fefefe;
+    background-color:#111a22;
+    cursor: pointer;
+    padding: 10px;
+    font-size:17px;
+    font-family: 'Montserrat', sans-serif;
+    margin-top:60px;
+    width:100%;
+
+}
+
+.createActivityBtnPlacement{
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 
